--- a/css/output.css
+++ b/css/output.css
@@ -9,6 +9,12 @@
 .transform {
   transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
 }
+.items-center {
+  align-items: center;
+}
+.justify-center {
+  justify-content: center;
+}
 @property --tw-rotate-x {
   syntax: "*";
   inherits: false;
